--- a/css/framework-12bool.css
+++ b/css/framework-12bool.css
@@ -1,17 +1,33 @@
-/* 12 COLUMN GRILL */
+/* 12 COLUMN GRID */
 
 /* CONTAINER */
 .container {
   width: 1170px;
   margin: 0 auto;
   max-width: 100%;
+  text-align: center;
 
-  /* debug space */
-  margin-bottom: 16px;
+    /* debug space */
+    margin-bottom: 16px;
+}
+
+.container::after{
+    content: "";
+    display: table;
+    clear: both;
 }
 
 
 /* GRIGLIA 12 COLONNE */
+[class*=col-] {
+  float: left;
+  padding: 0px 10px;
+}
+
+.padd-0 {
+  padding: 0px;
+}
+
 .col-1 {
   width: calc((100% / 12) * 1);
 }
@@ -25,7 +41,7 @@
 }
 
 .col-4 {
-  width: lc((100% / 12) * 4);
+  width: calc((100% / 12) * 4);
 }
 
 .col-5 {
