--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* GENERAL */
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -18,6 +18,7 @@ h2 {
 /* box demo */
 .box {
   text-align: center;
-  background-color: lightgray;
-  padding: 20px;
+  background-color: #00af9c;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
